# wallpaper

./: .gitignore  Cargo.toml  config.json
config/: config.json
config_creator/: Cargo.toml  build.rs
config_creator/src/: index.html  main.rs
daily/: Cargo.toml  build.rs
daily/src/: autostart.rs  config.rs  download.rs  file_manager.rs  logger.rs  main.rs  manager_updater.rs  state.rs  utils.rs  wallpaper.rs  wallpaper_manager.rs  web_server.rs
daily_web/: Cargo.toml
daily_web/src/: main.rs
manager/: Cargo.toml
manager/src/: daily_updater.rs  download.rs  index.html  main.rs  utils.rs
manager/src/api/: config.rs  logs.rs  mod.rs  status.rs  wallpaper.rs
shared/: Cargo.toml
shared/src/: lib.rs
special/: special.html
update/: Cargo.toml
update/src/: main.rs
windowsperson/: Cargo.toml
windowsperson/src/: main.rs
windowsservicemanger/: Cargo.toml
windowsservicemanger/src/: index.html  main.rs
