[package]
name = "daily"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
log = "0.4"
