[package]
name = "daily"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
wallpaper = "3.2"
winreg = "0.52"
dirs = "5.0"
anyhow = "1.0"
sha2 = "0.10"
hex = "0.4"
once_cell = "1.19"


[build-dependencies]
winres = "0.1"

