[package]
name = "daily"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
flexi_logger = { version = "0.28", features = ["compress", "async"] }
shellexpand = "3.1"
thiserror = "1"
axum = "0.7"
tower-http = { version = "0.5", features = ["fs"] }
notify = "6.1"
sha256 = "1.5"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Com",
    "Win32_Security",
]}