[package]
name = "manager"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
sysinfo = "0.30"
reqwest = { version = "0.12", features = ["rustls-tls"] }
anyhow = "1.0"
dirs = "5.0"
wallpaper = "3.2"
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.19"
tower-http = { version = "0.5", features = ["fs"] }
winreg = "0.52"
log = "0.4"
fern = "0.6"
chrono = "0.4"

[build-dependencies]
winres = "0.1"