[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
winreg = "0.52"
sysinfo = "0.30"
dirs = "5.0"
chrono = "0.4"
log = "0.4"
simplelog = "0.12"
winapi = { version = "0.3", features = ["winuser"] }