[package]
name = "update"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = "0.12"
log = "0.4"
flexi_logger = { version = "0.28", features = ["compress", "async"] }
shellexpand = "3.1"
thiserror = "1"
sha256 = "1.5"
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
    "Win32_System_SystemServices",
]}
